# BRH

./: README.md
brh_proj/: README.md  pyproject.toml
brh_proj/src/brh_proj/: crew.py  main.py
db/: chroma.sqlite3
src/: .env  delta.py  main.py  webapp.py
src/backend/: package.json  server.js
src/backend/controllers/: authController.js  noteController.js
src/backend/middleware/: auth.js
src/backend/models/: Note.js  User.js
src/backend/routes/: noteRoutes.js
src/extension/: background.js  journals.html  journals.js  manifest.json  popup.html  popup.js  server.js  settings.html  settings.js  styles.css
src/extension2/: journals.js  manifest.json  notes.db  popup.html  popup.js  server.js
src/frontend/: package.json
src/frontend/public/: index.html
src/frontend/src/: App.js  index.js  styles.css
src/frontend/src/components/: AddNoteForm.js  LoginForm.js  NoteCard.js  RegisterForm.js
src/frontend/src/pages/: LoginPage.js  NotesPage.js  RegisterPage.js
src/templates/: index.html
