[tool.poetry]
name = "brh_proj"
version = "0.1.0"
description = "brh_proj using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.61.0,<1.0.0" }


[tool.poetry.scripts]
brh_proj = "brh_proj.main:run"
run_crew = "brh_proj.main:run"
train = "brh_proj.main:train"
replay = "brh_proj.main:replay"
test = "brh_proj.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
